tests/snapshots/file@base@operator@equals_class.lox.snap
---
source: tests/common/mod.rs
description: "// Bound methods have identity equality.\nclass Foo {}\nclass Bar {}\n\nprint Foo == Foo; // expect: true\nprint Foo == Bar; // expect: false\nprint Bar == Foo; // expect: false\nprint Bar == Bar; // expect: true\n\nprint Foo == \"Foo\"; // expect: false\nprint Foo == nil;   // expect: false\nprint Foo == 123;   // expect: false\nprint Foo == true;  // expect: false\n"
input_file: crafting_interpreters_test_files/operator/equals_class.lox
---
OUT: 
true
false
false
true
false
false
false
false

===
ERR:
