tests/snapshots/file@base@operator@equals_method.lox.snap
---
source: tests/common/mod.rs
description: "// Bound methods have identity equality.\nclass Foo {\n  method() {}\n}\n\nvar foo = Foo();\nvar fooMethod = foo.method;\n\n// Same bound method.\nprint fooMethod == fooMethod; // expect: true\n\n// Different closurizations.\nprint foo.method == foo.method; // expect: false\n"
input_file: crafting_interpreters_test_files/operator/equals_method.lox
---
OUT: 
true
false

===
ERR:
