tests/snapshots/file@base@operator@negate_nonnum.lox.snap
---
source: tests/common/mod.rs
description: "-\"s\"; // expect runtime error: Operand must be a number.\n"
input_file: crafting_interpreters_test_files/operator/negate_nonnum.lox
---
OUT: 

===
ERR: 
  × invalid operand, expected a number
   ╭────
 1 │ -"s"; // expect runtime error: Operand must be a number.
   · ┬
   · ╰── here
   ╰────
